--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "menuLeft",
+  "name": "flex-calc",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "Henoc Salinas Juarez",
   "homepage": "http://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -23,23 +23,31 @@
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
     "@fortawesome/fontawesome-free": "^5.5.0",
+    "@ionic-native/android-full-screen": "^5.0.0-beta.21",
     "@ionic-native/core": "5.0.0-beta.21",
+    "@ionic-native/social-sharing": "^5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/sqlite": "^5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
-    "@ionic/angular": "4.0.0-beta.15",
+    "@ionic/angular": "^4.0.0-beta.15",
     "@ionic/storage": "^2.2.0",
     "cordova-android": "7.1.2",
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
+    "cordova-plugin-fullscreen": "1.2.0",
     "cordova-plugin-ionic-keyboard": "^2.1.3",
     "cordova-plugin-ionic-webview": "^2.2.3",
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-plugin-x-socialsharing": "5.4.3",
     "cordova-sqlite-storage": "2.5.1",
     "core-js": "^2.5.3",
+    "es6-promise-plugin": "4.2.2",
+    "html-to-image": "^0.1.0",
+    "html2canvas": "^1.0.0-alpha.12",
     "ionic": "^4.3.1",
+    "materialize-css": "^1.0.0",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
@@ -54,6 +62,7 @@
     "@angular/language-service": "~6.1.1",
     "@ionic/angular-toolkit": "^1.0.0",
     "@ionic/lab": "1.0.13",
+    "@types/html2canvas": "0.0.35",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~10.12.0",
@@ -71,7 +80,7 @@
     "tslint": "~5.11.0",
     "typescript": "~2.9.2"
   },
-  "description": "An Ionic project",
+  "description": "Calculadora de variables de flexografia",
   "cordova": {
     "plugins": {
       "cordova-plugin-whitelist": {},
@@ -82,7 +91,9 @@
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-sqlite-storage": {}
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-x-socialsharing": {},
+      "cordova-plugin-fullscreen": {}
     },
     "platforms": [
       "android",
