--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "html2canvas": "^1.0.0-alpha.12",
     "ionic": "^4.3.1",
     "materialize-css": "^1.0.0",
+    "roboto-fontface": "^0.10.0",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
   },
