--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "^4.0.0-beta.16",
     "@ionic/storage": "^2.2.0",
+    "chroma-js": "^1.4.1",
     "cordova-android": "7.1.2",
     "cordova-browser": "5.0.4",
     "cordova-plugin-device": "^2.0.2",
@@ -63,6 +64,7 @@
     "@angular/language-service": "~6.1.1",
     "@ionic/angular-toolkit": "^1.0.0",
     "@ionic/lab": "1.0.13",
+    "@types/chroma-js": "^1.4.0",
     "@types/html2canvas": "0.0.35",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
