--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/social-sharing": "^5.0.0-beta.21",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/sqlite": "^5.0.0-beta.21",
+    "@ionic-native/sqlite-porter": "^5.0.0-beta.22",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "^4.0.0-beta.16",
     "@ionic/storage": "^2.2.0",
@@ -51,6 +52,7 @@
     "materialize-css": "^1.0.0",
     "roboto-fontface": "^0.10.0",
     "rxjs": "6.2.2",
+    "uk.co.workingedge.cordova.plugin.sqliteporter": "1.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -96,7 +98,8 @@
       "cordova-plugin-ionic-keyboard": {},
       "cordova-sqlite-storage": {},
       "cordova-plugin-x-socialsharing": {},
-      "cordova-plugin-fullscreen": {}
+      "cordova-plugin-fullscreen": {},
+      "uk.co.workingedge.cordova.plugin.sqliteporter": {}
     },
     "platforms": [
       "android",
